--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header></header>
+  <header>
+    <img src="./Assets/icons/bitcoin-logo.svg" alt="">
+    <div class="header--title-container">
+      <h1>La próxima revolución en el intercambio de criptomonedas</h1>
+      <p>
+        Bitmoney te ayuda a navegar entre los diferentes precios y tendencias
+      </p>
+      <a class="header--button" href="">Conoce nuestros planes<samp>i</samp></a>
+    </div>
+  </header>
   <main>
     <section></section>
     <section></section>
