Uso de position para botón flotante

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>
         Bitmoney te ayuda a navegar entre los diferentes precios y tendencias
       </p>
-      <a class="header--button" href="">Conoce nuestros planes<samp>i</samp></a>
+      <a class="header--button" href="">Conoce nuestros planes<span></span></a>
     </div>
   </header>
   <main>
