--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     </div>
   </header>
   <main>
-    <section></section>
+    <section class="main-exchange-container">
+      <div class="background-img"></div>
+      <div class="main-exchange-container--title">
+        <h2>Visibilizamos todas las tazas de cambio.</h2>
+        <p>Traemos información en tiempo real de las casas de cambio y las monedas mas importante del mundo</p>
+      </div>
+      <section class="main-table-container">
+        <div></div>
+      </section>
+    </section>
     <section></section>
     <section></section>
     <section></section>
